# eval-tfo

./: .gitignore  output1.md  pyproject.toml
notebooks/: 0-demo-tfo.ipynb
outputs/: output2.md
src/: setup.py
